Fix a test and increase mem settings for scala test plugin.