@@ -585,6 +585,7 @@
             <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
             <junitxml>.</junitxml>
             <filereports>WDF TestSuite.txt</filereports>
+            <argLine>-Xmx4096m -XX:MaxPermSize=512m</argLine>
           </configuration>
           <executions>
             <execution>
